Make like action more visible, fix jumping to top.
The like button was a a-link, but is now a span with cursor:pointer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36245,6 +36245,7 @@ p.train-status:before {
 
 .status .list-inline .like {
   color: #f5a530;
+  cursor: pointer;
 }
 
 .status .list-inline .list-inline-item:not(:last-child) {
